fix overflow

--- a/styles.css
+++ b/styles.css
@@ -934,7 +934,7 @@ footer {
     }
 
     .logo-button img {
-        width: 100%;
+        width: 80%;
     }
 
     .tesla img {
